# kerf

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: index.md
docs/concepts/: design-decisions.md  engine.md  fallback-policies.md
docs/getting-started/: installation.md  project-structure.md  quickstart.md
docs/guides/: logs.md  mcp.md  server.md  tools.md  workflows.md
docs/reference/: builtins.md  cli.md  configuration.md  server-api.md  tool-api.md  workflow-format.md
src/ashlar/: __init__.py  builtins.py  cli.py  config.py  engine.py  gar.py  models.py  prompts.py  server.py  tools.py
src/ashlar/scaffold/: __init__.py  example_classify.json  example_extract.json  example_workflow.json  mcp_config_template.json  tool_template.py
src/kerf/: __init__.py  builtins.py  cli.py  config.py  engine.py  gar.py  models.py  server.py  stats.py  tools.py
src/kerf/scaffold/: __init__.py  example_digest.json  tool_template.py  workflow_template.json
tests/: test_builtins.py  test_config.py  test_engine.py  test_gar.py  test_models.py  test_prompts.py  test_scaffold.py  test_stats.py  test_tools.py
