[project]
name = "ashlar"
version = "0.1.0"
description = "Declarative workflow engine where the LLM is a pluggable, disposable step"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Derek Zhang" }
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ashlar = "ashlar.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashlar"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "httpx>=0.24",
    "mkdocs-material>=9.5",
]
