[project]
name = "kerf"
version = "0.1.2"
description = "Declarative workflow engine where the LLM is a pluggable, disposable step"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Derek Zhang" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/derek-yn-zhang/kerf"
Documentation = "https://derek-yn-zhang.github.io/kerf/"
Repository = "https://github.com/derek-yn-zhang/kerf"
Issues = "https://github.com/derek-yn-zhang/kerf/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
    "mkdocs-material>=9.5",
]

[project.scripts]
kerf = "kerf.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kerf"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "httpx>=0.24",
    "mkdocs-material>=9.5",
]
